# Transleg

./: .env.example  .gitignore  README.md  pyproject.toml
sql/: schema.sql
src/transleg/: __init__.py  cli.py
src/transleg/application/: orchestrator.py
src/transleg/core/: config.py  logging.py
src/transleg/domain/: exceptions.py  models.py
src/transleg/infrastructure/: browser.py  downloads.py  portal.py  postgres.py  report_catalog.py
src/transleg/services/: transformations.py
tests/: test_report_catalog.py  test_transformations.py
